fix: make player name alignment more consistent
Making text-align left makes the player names look centered.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -66,6 +66,7 @@ h1, h2, h3, p, li {
 
 li {
     list-style-type: none;
+    text-align: left !important;
 }
 
 input {
